<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gym_icon"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/image_Discription" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/backgroundColor"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/fees"
            android:layout_weight="1"
            android:textColor="@color/textcolorhint"
            android:layout_margin="2dp"

            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:fillViewport="true"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/fee_id"
        android:textColorHint="@color/textcolorhint"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:id="@+id/edt_feeid"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/select_customer_name"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textColor="@color/txtColordark"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/spinner_cust_name"
        android:layout_margin="10dp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/select_package_id"
        android:layout_margin="10dp"
        android:textColor="@color/txtColordark"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/spinner_packag_id"
        android:layout_weight="1"
        android:layout_margin="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/total_fees_amount"
        android:textColorHint="@color/textcolorhint"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:inputType="numberDecimal"
        android:id="@+id/edt_feeamount"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/amount_received"
        android:textColorHint="@color/textcolorhint"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:inputType="numberDecimal"
        android:id="@+id/edt_amtreceived"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/discount"
        android:textColorHint="@color/textcolorhint"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:inputType="numberDecimal"
        android:id="@+id/edt_feediscount"
        />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Outstanding Fees"
                android:visibility="gone"
                android:id="@+id/txt_feeoutstanding"
                />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/total_outstanding"
        android:textColorHint="@color/textcolorhint"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:focusable="false"
        android:visibility="visible"
        android:id="@+id/edt_feeoutstanding"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/fee_date_from"
        android:textColorHint="@color/textcolorhint"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:focusable="false"
        android:id="@+id/edt_feedatefrom"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/fee_date_to"
        android:textColorHint="@color/textcolorhint"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:focusable="false"
        android:id="@+id/edt_feedateto"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/fee_submit"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle,HardcodedText" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:id="@+id/fee_cancel"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>